# AUV-Ubuntu

./: readme.md
ampc_cpp/devel/: .catkin  .rosinstall  local_setup.fish  setup.sh
ampc_cpp/devel/lib/ampc_cpp/: auv_control_node
ampc_cpp/devel/lib/pkgconfig/: ampc_cpp.pc
ampc_cpp/devel/share/ampc_cpp/cmake/: ampc_cppConfig.cmake
ampc_cpp/src/ampc_cpp/: CMakeLists.txt  package.xml
ampc_cpp/src/ampc_cpp/include/ampc_cpp/: adaptive.hpp  kalman_filter.hpp  matrix_utils.hpp  mpc.hpp  ros_interface.hpp
ampc_cpp/src/ampc_cpp/src/: adaptive.cpp  kalman_filter.cpp  main_node.cpp  matrix_utils.cpp  mpc.cpp  ros_interface.cpp
ros_serial/devel/: .catkin  local_setup.sh  setup.sh
ros_serial/devel/lib/pkgconfig/: ros_serial.pc
ros_serial/devel/share/ros_serial/cmake/: ros_serialConfig.cmake
ros_serial/src/ros_serial/: CMakeLists.txt  package.xml
ros_serial/src/ros_serial/scripts/: serial_publisher.py  serial_reader.py
